overflow issue

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 .dark-body {
-    overflow: hidden;
+    scrollbar-width: none;
 }
 
 .dark-body::-webkit-scrollbar {
@@ -20,6 +20,7 @@
 /* Mozilla Firefox */
 body {
     overflow-y: auto;
+    /* overflow-y: hidden; */
     overflow-x: hidden;
     scrollbar-width: thin;
     scrollbar-color: #394053 #4f5055;
@@ -41,7 +42,7 @@ body {
     top: 0;
     left: 0;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background: #0f0f0f;
     z-index: 999;
 }
@@ -85,6 +86,8 @@ body {
 .dark-body {
     background: #0f0f0f;
     color: white;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 .scrollable::-webkit-scrollbar {
